# addompiler

./: Cargo.toml  README.md
addompile_templates/addon/src/BP/: manifest.json
addompile_templates/script-addon/src/BP/: manifest.json
addompile_templates/script-addon/src/RP/: manifest.json
src/: build.rs  initialize.rs  main.rs  watch.rs
src/arguments/: args.rs
src/command/: copy.rs  mod.rs  run_command.rs
src/config/: config.rs
src/templates_manager/: templates.rs
