[package]
name = "addompiler"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2"
glob = "0.3"
notify = "6"
notify-debouncer-mini = "0.4"
include_dir = "0.7.4"
